# CSC8508-2023

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CSC8503.sln  GameTechRenderer.cpp  GameTechRenderer.h  INSTALL.vcxproj.filters  LevelManager.cpp  LevelManager.h  MiniMap.h  README.txt  Word Doc.docx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Assets/: UsedAssets.csv
Assets/Data/: TestGrid1.txt
Assets/Levels/: NewMediumRoom.json  TestLevel.json
Assets/Meshes/: Door.mat  Door.msh  Security_Camera.mat  Security_Camera.msh  Toolbox.mat  Toolbox.msh  Vent.mat  Vent.msh  chest.msh  present.msh
Assets/Shaders/: Debug.frag  Debug.vert  DebugLines.frag  DebugLines.vert  DebugText.frag  DebugText.vert  SkinningVertex.glsl  TexturedFragment.glsl  UI.frag  UI.vert  animationScene.frag  animationScene.vert  basic.frag  basic.vert  combine.frag  combine.vert  dirlight.frag  guardAnimScene.vert  light.frag  light.vert  outline.frag  outline.vert  outlineAnimated.vert  playerAnimScene.vert  pointlight.frag  scene.frag  scene.vert  sceneInstanced.vert  skybox.frag  skybox.vert  spotlight.frag
Assets/Textures/: Alarm.png.gnf  Basic_Normal.png.gnf  Bed_Blue_Albedo.png.gnf  Bed_Duvet_Albedo.png.gnf  Bed_Metal_Albedo.png.gnf  BookShelf_Albedo.png.gnf  BookShelf_Normal.png.gnf  CarpetAlbedo.png.gnf  CarpetNormal.png.gnf  CeilingLightAlbedo.png.gnf  CeilingLightNormal.png.gnf  Chair_BaseColor.png.gnf  Chair_Normal.png.gnf  Cover_diffuse.png.gnf  Cover_normal.tga  Cross.png.gnf  FB_BodyHands_Guard_Albedo.png.gnf  FB_BodyHands_Guard_Metallic.png.gnf  FB_BodyHands_Guard_Normal.png.gnf  FB_Hair_Sweptback_Albedo 1.png.gnf  FB_Hair_Sweptback_Normal.png.gnf  FB_Head_White01_Albedo.png.gnf  FB_Head_White01_Normal.png.gnf  GoldCoins_AlbedoTransparency.png.gnf  GoldCoins_Normal.png.gnf  HighlightAward.png.gnf  HomePlant7.png.gnf  HomePlant8_Color.png.gnf  HomePlant8_Normal.png.gnf  InventorySlot.png.gnf  LightOff.png.gnf  MA_Hands_White_Albedo.png.gnf  MA_Hands_White_Normal.png.gnf  MB_BodyNone_Guard_Albedo.png.gnf  MB_BodyNone_Guard_Metallic.gnf  MB_BodyNone_Guard_Normal.png.gnf  MB_Head_White01_Albedo.png.gnf  MB_Head_White01_Normal.png.gnf  MakingNoise.png.gnf  Maximilian_BodyHands_Albedo.png.gnf  (+94 more)
CSC8503/: BaseUI.cpp  BaseUI.h  CMakeLists.txt  CMakePC.cmake  CMakePS5.cmake  CSC8503.vcxproj  CSC8503.vcxproj.filters  ControllerInterface.cpp  ControllerInterface.h  DebugNetworkedGame.cpp  DebugNetworkedGame.h  GameManager.cpp  GameManager.h  GameSceneManager.cpp  GameSceneManager.h  GameStart.cpp  GameTechAGCRenderer.cpp  GameTechAGCRenderer.h  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.cpp  GameTechRendererInterface.h  INSTALL.vcxproj.filters  LevelGenerator.cpp  LevelGenerator.h  LevelManager.cpp  LevelManager.h  Main.cpp  MainMenuScene.cpp  MainMenuScene.h  MiniMap.cpp  MiniMap.h  MultiplayerStates.cpp  MultiplayerStates.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  PlayerObject.h  PushdownStates.h  (+22 more)
CSC8503/InventoryBuffSystem/: FlagGameObject.cpp  FlagGameObject.h  InventoryBuffSystem.h  Item.cpp  Item.h  PickupGameObject.cpp  PickupGameObject.h  PlayerBuffs.cpp  PlayerBuffs.h  PlayerInventory.cpp  PlayerInventory.h  SoundEmitter.cpp  SoundEmitter.h
CSC8503/SuspicionSystem/: GlobalSuspicionMetre.cpp  GlobalSuspicionMetre.h  LocalSuspicionMetre.h  (+6 more)
CSC8503CoreClasses/: AABBVolume.h  AnimationObject.cpp  AnimationObject.h  AnimationSystem.cpp  AnimationSystem.h  BaseLight.h  BehaviourSequence.cpp  BehaviourSequence.h  CCTV.cpp  CCTV.h  CMakeLists.txt  CMakePC.cmake  CMakePS5.cmake  CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CapsuleVolume.h  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  Debug.cpp  Debug.h  DirectionalLight.h  Door.cpp  Door.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  GuardObject.cpp  GuardObject.h  Helipad.cpp  Helipad.h  ILevelManager.cpp  ILevelManager.h  INSTALL.vcxproj.filters  Interactable.h  (+56 more)
DebugUtils/: DebugUtils.vcxproj.filters  INSTALL.vcxproj.filters
Detour/: Detour.vcxproj.filters  INSTALL.vcxproj.filters
DetourTileCache/: DetourTileCache.vcxproj.filters  INSTALL.vcxproj.filters
EntryPoint/: CMakeLists.txt  CMakePC.cmake  CmakePS5.cmake  EntryPoint.vcxproj.filters  Shaders.vcxproj.filters  Textures.vcxproj.filters  main.cpp
EntryPoint/EntryPoint.dir/Debug/: EntryPoint.exe.recipe
EntryPoint/EntryPoint.dir/Debug/EntryPoint.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EntryPoint.lastbuildstate  cmake_pch.hxx.pch.dep  prospero-clang-cl.command.1.tlog  prospero-clang-cl.read.1.tlog  prospero-clang-cl.write.1.tlog  prospero-lld.command.1.tlog  prospero-lld.read.1.tlog  prospero-lld.write.1.tlog  prospero-wave-psslc.command.1.tlog  prospero-wave-psslc.read.1.tlog  prospero-wave-psslc.write.1.tlog
EntryPoint/EntryPoint.dir/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
InventoryBuffSystem/: PickupGameObject.h
NCLCoreClasses/: Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  INSTALL.vcxproj.filters  Maths.cpp  Maths.h  Matrix4.h  Mesh.cpp  Mesh.h  MeshAnimation.cpp  MeshAnimation.h  MeshMaterial.cpp  MeshMaterial.h  MshLoader.cpp  MshLoader.h  NCLCoreClasses.vcxproj  NCLCoreClasses.vcxproj.filters  Pyramid.cpp  Pyramid.h  Quaternion.cpp  Quaternion.h  RendererBase.cpp  RendererBase.h  SpotLight.h  TextureLoader.cpp  UISystem.cpp  UISystem.h  Vector.h  Vector3.h  Win32Window.cpp  Win32Window.h  cmake_install.cmake
OpenGLRendering/: INSTALL.vcxproj.filters  OGLComputeShader.h  OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters  cmake_install.cmake
Recast/: CMakeLists.txt  INSTALL.vcxproj.filters  Recast.vcxproj.filters
VulkanRendering/: VulkanRendering.vcxproj  VulkanRendering.vcxproj.filters  cmake_install.cmake
(+296 files in other folders)
